classDiagram
    class Owner {
        +str name
        +int available_minutes
        +str preferences
    }

    class Pet {
        +str name
        +str species
        +list~Task~ tasks
        +add_task(task) None
        +edit_task(task) None
        +remove_task(task) None
    }

    class Task {
        +str name
        +str category
        +int duration
        +int priority
    }

    class Scheduler {
        +Owner owner
        +make_plan() list~Task~
        +display_plan() str
        +explain() str
    }

    Owner "1" --> "*" Pet : cares for
    Pet "1" o-- "*" Task : has
    Scheduler "1" --> "1" Owner : plans for
